# aycheCalendar

./: .gitignore  README.md
src/: CalendarWindow.py  CreateEventWindow.py  LoginWindow.py  SignUpWindow.py  VerificationWindow.py  day.py  dbControl.py  emailConnect.py  eventHandler.py  events.py  main.py  mongoConnect.py  month.py  testConnection.py
src/PyQt5-5.13.2/PyQt5-5.13.2/: ChangeLog  NEWS  configure.py  project.py  pyproject.toml
src/PyQt5-5.13.2/PyQt5-5.13.2/qpy/QtCore/: qpycore_api.h  qpycore_chimera.cpp  qpycore_event_handlers.cpp  qpycore_event_handlers.h  qpycore_init.cpp  qpycore_post_init.cpp.in  qpycore_public_api.cpp  qpycore_public_api.h  qpycore_qstring.cpp  qpycore_qt_conf.cpp
src/PyQt5-5.13.2/PyQt5-5.13.2/sip/QtCore/: QtCoremod.sip  qcoreapplication.sip  qdatastream.sip  qglobal.sip  qlocale.sip  qpycore_onexit.sip
src/PyQt5-5.13.2/PyQt5-5.13.2/sip/QtGui/: qguiapplication.sip  qimage.sip  qstylehints.sip  qtextformat.sip
src/PyQt5-5.13.2/PyQt5-5.13.2/sip/QtMultimedia/: qvideoframe.sip
src/PyQt5-5.13.2/PyQt5-5.13.2/sip/QtNetwork/: QtNetworkmod.sip  qnetworkaccessmanager.sip  qnetworkrequest.sip
src/PyQt5-5.13.2/PyQt5-5.13.2/sip/QtWidgets/: qapplication.sip  qcombobox.sip  qfiledialog.sip  qtextedit.sip
